--- a/PortfolioEAI/Pages/Privacy.cshtml
+++ b/PortfolioEAI/Pages/Privacy.cshtml
@@ -6,3 +6,17 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
+
+ <div class="container px-4 px-lg-5">
+    <div class="row gx-4 gx-lg-5 justify-content-center">
+        <div class="col-lg-8">
+            <h2 class="text-black mb-4">Built with ASP.NET Core Razor</h2>
+            <p class="text-black-50">
+                Ce modèle est un thème Bootstrap gratuit créé par Start Bootstrap. Il peut être à vous dès maintenant : téléchargez simplement le modèle sur 
+                <a href="https://startbootstrap.com/theme/grayscale/">la page de prévisualisation.</a> 
+                Le thème est open source, et vous pouvez l’utiliser à n’importe quelle fin, qu’elle soit personnelle ou commerciale.
+            </p>
+        </div>
+    </div>
+    <img class="img-fluid" src="assets/img/ipad.png" alt="..." />
+</div>
