--- a/PortfolioEAI/Pages/Index.cshtml
+++ b/PortfolioEAI/Pages/Index.cshtml
@@ -31,7 +31,7 @@
                 </p>
             </div>
         </div>
-        <img class="img-fluid" src="assets/img/ipad.png" alt="..." />
+        <img class="img-fluid" src="assets/img/Moi.png" alt="..." />
     </div>
 </section>
 
@@ -40,7 +40,7 @@
         <!-- Featured Compétence Row-->
         <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
             <div class="col-xl-8 col-lg-7">
-                <img class="img-fluid mb-3 mb-lg-0" src="assets/img/skills.png" alt="..." />
+                <img class="img-fluid mb-3 mb-lg-0" src="assets/img/skills.jpg" alt="..." />
             </div>
             <div class="col-xl-4 col-lg-5">
                 <div class="featured-text text-center text-lg-left">
@@ -125,7 +125,7 @@
 </section>
 
 <!-- Contact-->
-<section class="contact-section bg-black">
+<section class="contact-section bg-black" id="contacts">
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5">
             <div class="col-md-4 mb-3 mb-md-0">
