--- a/PortfolioEAI/Pages/Shared/_Layout.cshtml
+++ b/PortfolioEAI/Pages/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container px-4 px-lg-5">
             <a class="navbar-brand" asp-area="" asp-page="/Index">
-                <img src="../assets/EAI.png" alt="" width="30" height="24">
+                <img src="assets/EAI.png" alt="" width="30" height="24">
                 ELEMBA ADI Eric
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +32,7 @@
                     <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link" asp-area="" asp-page="/Contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contacts">Contact</a></li>
                 </ul>
             </div>
         </div>
